--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
       content="Small game about night watchman"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Night Watcher</title>
+    <title>Ночной смотритель</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Для корректной работы сайта включите JavaScript в вашем браузере.</noscript>
     <div id="root"></div>
   </body>
 </html>
