Little visual change

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Small game about night watchman"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Ночной смотритель</title>
+    <title>Ночной Смотритель</title>
   </head>
   <body>
     <noscript>Для корректной работы сайта включите JavaScript в вашем браузере.</noscript>
