google-site-verification

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="google-site-verification" content="2jRSruoZCfCAoXzdxfM-mbFlMUnrtugV9ocAJ0f2Pt0" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
