feat(tutorial): add global pause during tutorial overlay steps

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="google-site-verification" content="2jRSruoZCfCAoXzdxfM-mbFlMUnrtugV9ocAJ0f2Pt0" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Small game about night watchman"
-    />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Ночной Смотритель</title>
-  </head>
-  <body>
-    <noscript>Для корректной работы сайта включите JavaScript в вашем браузере.</noscript>
-    <div id="root"></div>
-  </body>
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+		<meta
+			name="google-site-verification"
+			content="2jRSruoZCfCAoXzdxfM-mbFlMUnrtugV9ocAJ0f2Pt0"
+		/>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="description" content="Small game about night watchman" />
+		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<title>Ночной Смотритель</title>
+	</head>
+	<body>
+		<noscript
+			>Для корректной работы сайта включите JavaScript в вашем
+			браузере.</noscript
+		>
+		<div id="root"></div>
+	</body>
 </html>
